# Cluster-BFS

./: .gitignore  CMakeLists.txt  README.md  RunAll.sh  report.tex
benchmark/: ADO_base.cpp  ADO_cluster.cpp  Akiba_BFS.cpp  CMakeLists.txt  cluster_BFS.cpp  ligra_BFS.cpp  sequential_BFS.cpp
data/ground_truth/: DBLP_sym.txt  Epinions1_sym.txt  Slashdot_sym.txt  arabic_sym.txt  com-orkut_sym.txt  com-youtube_sym.txt  eu-2015-host_sym.txt  friendster_sym.txt  hollywood_2009_sym.txt  in_2004_sym.txt  indochina_sym.txt  sd_arc_sym.txt  skitter_sym.txt  soc-LiveJournal1_sym.txt  socfb-konect_sym.txt  socfb-uci-uni_sym.txt  twitter_sym.txt  uk-2002_sym.txt
include/parlay/internal/: get_time.h
scripts/: Experiment1.py  Experiment2.py  Experiment3.py  Experiment4.py  Experiment5.py  data_collection.py  download.py  draw_exp1_figure.py  draw_exp1_table.py  draw_exp2_figure.py  draw_exp2_table.py  draw_exp3_figure.py  draw_exp4_tables.py  draw_exp5_table.py  graph.py
src/: ADO_base.h  ADO_cluster.h  BFS_ligra.h  cluster_BFS.h  cluster_BFS_batch.h  graph_utils.h  ligra_light.h  parseCommandLine.h  utils.h
